<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_border"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/createaccount"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:boxStrokeColor="@color/teal_700"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/teal_700"
                    app:endIconTint="@color/teal_700"
                    app:hintTextColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:textColorHighlight="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/teal_700"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconTint="@color/teal_700"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/teal_700"
                    app:startIconDrawable="@drawable/ic_baseline_call_24"
                    app:hintTextColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_mobile_no"
                        android:inputType="phone"
                        android:textColorHighlight="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/teal_700"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="@color/teal_700"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconTint="@color/teal_700"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/createpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Create Password"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_gender"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Male" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:text="Female" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <CheckBox
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:buttonTint="@color/black"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_corner"
                android:backgroundTint="@color/teal_700"
                android:text="Sign up"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/Or" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/gotologinly"
                android:orientation="horizontal"
                android:padding="16dp">


                <TextView
                    android:id="@+id/googlebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/already_have_account"
                    android:textColor="@color/black"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>