<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_border"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/teal_700"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconTint="@color/teal_700"
                    app:hintTextColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phonecode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:text="+91" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/teal_700"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_call_24"
                    app:endIconTint="@color/teal_700"
                    app:startIconTint="@color/teal_700"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mobile no"
                        android:inputType="phone"
                      />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/teal_700"
                android:layout_marginTop="8dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/teal_700"
                app:endIconTint="@color/teal_700"
                app:hintTextColor="@color/black">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/enterpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter  Password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <CheckBox
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:buttonTint="@color/black"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_corner"
                android:backgroundTint="@color/teal_700"
                android:text="LOGIN"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/Or" />

            <LinearLayout
                android:id="@+id/donthaveaccountly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/googlebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/don_t_have_account"
                    android:textColor="@color/black"

                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>